apps/production/unifi-network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
spec:
  ingressClassName: traefik
  rules:
    - host: unifi.bearjordan.local
      http:
        paths:
          - backend:
              service:
                name: unifi-network
                port:
                  number: 8080
            path: /
            pathType: Prefix
